chore(java) update to java 25 (#509)
Signed-off-by: Roman <4833306+Filter94@users.noreply.github.com>